syntax = "proto3";

package echo;

service Echo {
  rpc ping (EchoRequest) returns (EchoResponse);
}

message EchoRequest
{
  string message = 1;
}

message EchoResponse
{
  string message = 1;
}
